force-app/main/default/objects/Guardian__c/fields/Guardian_ID__c.field-meta.xml
<CustomField>
    <fullName>Guardian_ID__c</fullName>
    <displayFormat>G-{0000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Auto-generated unique Guardian ID for integration.</inlineHelpText>
    <label>Guardian ID</label>
    <type>AutoNumber</type>
</CustomField>