force-app/main/default/objects/Guardian__c/fields/Relationship_to_Student__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Student__c</fullName>
    <label>Relationship to Student</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>