force-app/main/default/objects/Guardian__c/validationRules/No_Self_Reference.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Self_Reference</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK(Student__c)) &amp;&amp; 
Student__c = Id</errorConditionFormula>
    <errorMessage>A Guardian cannot reference themselves as the Student.</errorMessage>
</ValidationRule>