force-app/main/default/objects/Guardian__c/validationRules/Phone_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Phone__c)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Guardian phone number is required</errorMessage>
</ValidationRule>