force-app/main/default/objects/Guardian__c/validationRules/Student_Link_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Student_Link_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Student__c)</errorConditionFormula>
    <errorDisplayField>Student__c</errorDisplayField>
    <errorMessage>Guardian must be linked to a Student</errorMessage>
</ValidationRule>